--- a/pteid-mw-pt/_src/eidmw/applayer/pteidapplayer.2008.vcxproj
+++ b/pteid-mw-pt/_src/eidmw/applayer/pteidapplayer.2008.vcxproj
@@ -108,7 +108,7 @@
       <LinkLibraryDependencies>false</LinkLibraryDependencies>
     </ProjectReference>
     <Link>
-      <AdditionalDependencies>wsock32.lib;Shlwapi.lib;libeay32.lib;ssleay32.lib;xerces-c_3D.lib;libcurl.lib;pteid-poppler.lib;xsec_1_6.lib;pteidDlgsWin32.lib;pteidcardlayer.lib;pteidcommon.lib;zlib.lib;libpng16.lib;openjp2.lib;libzip.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>wsock32.lib;Shlwapi.lib;libcrypto.lib;libssl.lib;xerces-c_3D.lib;libcurl.lib;pteid-poppler.lib;xsec_1_6.lib;pteidDlgsWin32.lib;pteidcardlayer.lib;pteidcommon.lib;zlib.lib;libpng16.lib;openjp2.lib;libzip.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>..\_Binaries35\$(Platform)\VC9\$(Configuration)\pteid$(ProjectName).dll</OutputFile>
       <AdditionalLibraryDirectories>..\_Binaries35\$(Platform)\VC9\$(Configuration);$(PTEID_DIR_CURL)\lib;$(PTEID_DIR_XERCES_31)\lib;$(PTEID_DIR_OPENSSL_098)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -136,7 +136,7 @@
       <LinkLibraryDependencies>false</LinkLibraryDependencies>
     </ProjectReference>
     <Link>
-      <AdditionalDependencies>wsock32.lib;Shlwapi.lib;crypt32.lib;libeay32.lib;ssleay32.lib;xerces-c_3.lib;libcurl.lib;pteid-poppler.lib;xsec_1.lib;pteidcommon.lib;pteidDlgsWin32.lib;pteidcardlayer.lib;zlib.lib;libpng16.lib;openjp2.lib;libzip.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>wsock32.lib;Shlwapi.lib;crypt32.lib;libcrypto.lib;libssl.lib;xerces-c_3.lib;libcurl.lib;pteid-poppler.lib;xsec_1.lib;pteidcommon.lib;pteidDlgsWin32.lib;pteidcardlayer.lib;zlib.lib;libpng16.lib;openjp2.lib;libzip.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>..\_Binaries35\$(Platform)\VC9\$(Configuration)\pteid$(ProjectName).dll</OutputFile>
       <AdditionalLibraryDirectories>..\_Binaries35\$(Platform)\VC9\$(Configuration);$(PTEID_DIR_CURL)\lib;$(PTEID_DIR_XERCES_31)\lib;$(PTEID_DIR_OPENSSL_098)\lib;$(PTEID_XMLSECURITY)\Build\Win32\VC10/Release No Xalan;$(PTEID_DIR_ZLIB)\lib;$(PTEID_DIR_LIBPNG)\lib;$(PTEID_DIR_OPENJPEG)\lib;$(PTEID_DIR_LIBZIP)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -171,7 +171,7 @@
       <LinkLibraryDependencies>false</LinkLibraryDependencies>
     </ProjectReference>
     <Link>
-      <AdditionalDependencies>wsock32.lib;Shlwapi.lib;crypt32.lib;libeay32.lib;ssleay32.lib;xerces-c_3.lib;libcurl.lib;pteid-poppler.lib;xsec_1.lib;pteidcommon.lib;pteidDlgsWin32.lib;pteidcardlayer.lib;zlib.lib;libpng16.lib;openjp2.lib;libzip.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>wsock32.lib;Shlwapi.lib;crypt32.lib;libcrypto.lib;libssl.lib;xerces-c_3.lib;libcurl.lib;pteid-poppler.lib;xsec_1.lib;pteidcommon.lib;pteidDlgsWin32.lib;pteidcardlayer.lib;zlib.lib;libpng16.lib;openjp2.lib;libzip.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>..\_Binaries35\$(Platform)\VC9\$(Configuration)\pteid$(ProjectName).dll</OutputFile>
       <AdditionalLibraryDirectories>..\_Binaries35\$(Platform)\VC9\$(Configuration);$(PTEID_DIR_CURL_X64)\lib;$(PTEID_DIR_XERCES_31_X64)\lib;$(PTEID_DIR_OPENSSL_098_X64)\lib;$(PTEID_XMLSECURITY)\Build\x64\VC10\Release No Xalan;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -202,7 +202,7 @@
       <LinkLibraryDependencies>false</LinkLibraryDependencies>
     </ProjectReference>
     <Link>
-      <AdditionalDependencies>wsock32.lib;Shlwapi.lib;crypt32.lib;libeay32.lib;ssleay32.lib;xerces-c_3.lib;libcurl.lib;pteid-poppler.lib;xsec_1.lib;pteidcommon.lib;pteidDlgsWin32.lib;pteidcardlayer.lib;zlib.lib;libpng16.lib;openjp2.lib;libzip.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>wsock32.lib;Shlwapi.lib;crypt32.lib;libcrypto.lib;libssl.lib;xerces-c_3.lib;libcurl.lib;pteid-poppler.lib;xsec_1.lib;pteidcommon.lib;pteidDlgsWin32.lib;pteidcardlayer.lib;zlib.lib;libpng16.lib;openjp2.lib;libzip.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>..\_Binaries35\$(Platform)\VC9\$(Configuration)\pteid$(ProjectName).dll</OutputFile>
       <Version />
       <AdditionalLibraryDirectories>..\_Binaries35\$(Platform)\VC9\$(Configuration);$(PTEID_DIR_CURL_X64)\lib;$(PTEID_DIR_XERCES_31_X64)\lib;$(PTEID_DIR_OPENSSL_098_X64)\lib;$(PTEID_XMLSECURITY)\Build\x64\VC10\Release No Xalan;$(PTEID_DIR_ZLIB_X64)\lib;$(PTEID_DIR_LIBPNG_X64)\lib;$(PTEID_DIR_OPENJPEG_X64)\lib;$(PTEID_DIR_LIBZIP_X64)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
@@ -238,6 +238,8 @@
     <ClCompile Include="PDFSignature.cpp" />
     <ClCompile Include="PhotoPteid.cpp" />
     <ClCompile Include="SAM.cpp" />
+    <ClCompile Include="ess_asn1.c" />
+    <ClCompile Include="ess_lib.c" />
     <ClCompile Include="ScapSSLConnection.cpp" />
     <ClCompile Include="SecurityContext.cpp" />
     <ClCompile Include="SigContainer.cpp" />
@@ -246,6 +248,7 @@
     <ClCompile Include="SSLConnection.cpp" />
     <ClCompile Include="TsaClient.cpp" />
     <ClCompile Include="XadesSignature.cpp" />
+    <ClCompile Include="XercesUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="APLCard.h" />
